# NewTms_2026_v1

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
benchmarks/: __init__.py  benchmark_context.py  benchmark_reasoning.py  conftest.py  fixtures.py  report.py  run_all.py
docs/: API.md  ARCHITECTURE.md  SETUP.md  TROUBLESHOOTING.md  user_guide.md
examples/: codebase_analyzer.py  custom_tools.py  roadmap_generator.py  simple_agent.py
src/agent_framework/: __init__.py  agent.py  competitive_analysis.py  competitive_models.py  context.py  logging.py  prioritization.py  prioritization_models.py  roadmap.py  roadmap_models.py  tools.py
tests/: __init__.py  test_agent.py  test_competitive_analysis.py  test_context.py  test_logging.py  test_prioritization.py  test_roadmap.py  test_tools.py
